production/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: project-production
  labels:
    name: ingress
  annotations:
    kubernetes.io.ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: "/production/api/?(.*)"
            pathType: Prefix
            backend:
              service:
                name: express-clusterip
                port:
                  name: express-port
          - path: "/production(.*)"
            pathType: Prefix
            backend:
              service:
                name: react-clusterip
                port:
                  name: react-port
